<resources>
    <string name="app_name">project-01</string>

    <string name="tab_name_1">Your films</string>
    <string name="tab_name_2">SomeOtherTab</string>
    <string name="ic_add_description">add</string>
    <string name="list_desc">List of media items</string>
    <string name="tab_desc">Choose tab</string>
    <string name="ic_item_desc">miniature</string>

    <string name="item_title">Title</string>
    <string name="item_premierDate">Premier Date</string>
    <string name="item_status">Status</string>
    <string name="item_category">Category</string>


    <string name="edit_title">Edit</string>
    <string name="edit_desc">Edit</string>

    <string name="edit_item_title">Title</string>
    <string name="edit_item_premier_date">Premier date</string>
    <string name="edit_item_category">Category</string>
    <string name="edit_item_discard">Discard item</string>
    <string name="edit_item_add">Add new item</string>
    <string name="edit_item_image">Image</string>
    <string name="edit_item_save">Save changes</string>
    <string name="edit_item_premier_date_desc">Enter a premier date</string>
    <string name="edit_item_status">Watched</string>
    <string name="edit_item_comment">Comment</string>
    <string name="edit_item_edit_info">You cannot edit watched item</string>
    <string name="details_title">Details</string>
    <string name="add_title">Add</string>
    <string name="filter_category">Category</string>
    <string name="filter_status">Status</string>
    <string name="fetched_data">Found:</string>

</resources>