<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:orientation="vertical"
    android:padding="16dp"
    android:tooltipText="@string/edit_item_status">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_image"
        app:layout_constraintBottom_toBottomOf="@+id/see_item_image"
        app:layout_constraintEnd_toStartOf="@+id/see_item_image"
        app:layout_constraintTop_toTopOf="@+id/see_item_image"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_comment"
        app:layout_constraintBottom_toBottomOf="@+id/see_item_comment"
        app:layout_constraintEnd_toStartOf="@+id/see_item_comment"
        app:layout_constraintTop_toTopOf="@+id/see_item_comment" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/item_status"
        app:layout_constraintBottom_toBottomOf="@+id/see_item_status"
        app:layout_constraintEnd_toStartOf="@+id/see_item_status"
        app:layout_constraintTop_toTopOf="@+id/see_item_status" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_category"
        app:layout_constraintBottom_toBottomOf="@+id/see_item_category"
        app:layout_constraintEnd_toStartOf="@+id/see_item_category"
        app:layout_constraintTop_toTopOf="@+id/see_item_category" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_title"
        app:layout_constraintBottom_toBottomOf="@+id/see_item_title"
        app:layout_constraintEnd_toStartOf="@+id/see_item_title"
        app:layout_constraintTop_toTopOf="@+id/see_item_title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_premier_date"
        app:layout_constraintBottom_toBottomOf="@+id/see_item_premier_date_input"
        app:layout_constraintEnd_toStartOf="@+id/see_item_premier_date_input"
        app:layout_constraintTop_toTopOf="@+id/see_item_premier_date_input" />

    <TextView
        android:id="@+id/seeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/edit_desc"
        android:text="@string/details_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/see_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/edit_item_image"
        app:layout_constraintBottom_toTopOf="@+id/see_item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seeTitle"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/see_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/edit_title"
        android:ems="10"
        android:hint="@string/edit_item_title"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/edit_item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_item_image" />

    <EditText
        android:id="@+id/see_item_premier_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_item_premier_date"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_item_title"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/see_Item_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/edit_item_save"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_item_see_info"
        app:srcCompat="?android:attr/textCheckMark"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/see_item_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/edit_item_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_item_status" />

    <TextView
        android:id="@+id/see_item_see_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/edit_item_edit_info"
        android:textColor="#F44336"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_item_comment" />

    <TextView
        android:id="@+id/see_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edit_item_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_item_premier_date_input" />

    <TextView
        android:id="@+id/see_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/item_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/see_item_category" />

</androidx.constraintlayout.widget.ConstraintLayout>
