<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:orientation="vertical"
    android:padding="16dp"
    android:tooltipText="@string/edit_item_status">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTitle"
        app:layout_constraintEnd_toStartOf="@+id/editTitle"
        app:layout_constraintTop_toTopOf="@+id/editTitle"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_image"
        app:layout_constraintBottom_toBottomOf="@+id/add_item_image"
        app:layout_constraintEnd_toStartOf="@+id/add_item_image"
        app:layout_constraintTop_toTopOf="@+id/add_item_image"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_category"
        app:layout_constraintBottom_toBottomOf="@+id/add_item_category"
        app:layout_constraintEnd_toStartOf="@+id/add_item_category"
        app:layout_constraintTop_toTopOf="@+id/add_item_category" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_title"
        app:layout_constraintBottom_toBottomOf="@+id/add_item_title"
        app:layout_constraintEnd_toStartOf="@+id/add_item_title"
        app:layout_constraintTop_toTopOf="@+id/add_item_title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/edit_item_premier_date"
        app:layout_constraintBottom_toBottomOf="@+id/add_item_premier_date_input"
        app:layout_constraintEnd_toStartOf="@+id/add_item_premier_date_input"
        app:layout_constraintTop_toTopOf="@+id/add_item_premier_date_input" />

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/edit_desc"
        android:text="@string/add_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_item_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/edit_item_image"
        app:layout_constraintBottom_toTopOf="@+id/add_item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/add_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/edit_title"
        android:ems="10"
        android:hint="@string/edit_item_title"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/edit_item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_image" />

    <EditText
        android:id="@+id/add_item_premier_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_item_premier_date"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_title"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/add_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:tooltipText="@string/edit_item_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_premier_date_input" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/edit_item_discard"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_category"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/edit_item_save"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_category"
        app:srcCompat="?android:attr/textCheckMark"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/add_item_edit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/edit_item_edit_info"
        android:textColor="#F44336"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_item_Save"
        app:layout_constraintStart_toEndOf="@+id/add_item_discard"
        app:layout_constraintTop_toBottomOf="@+id/add_item_category" />

</androidx.constraintlayout.widget.ConstraintLayout>
